@@ -1878,7 +1878,7 @@ static char *ZonstatHelp[] = {
     "    zonavg   Zonal average",
     "             For every latitude the average over all longitudes is computed.",
     "    zonstd   Zonal standard deviation",
-    "             For every latitude the standard deviation over all longitudes is computed. Divisor is n. ",
+    "             For every latitude the standard deviation over all longitudes is computed. Divisor is n.",
     "    zonstd1  Zonal standard deviation",
     "             For every latitude the standard deviation over all longitudes is computed. Divisor is (n-1). ",
     "    zonvar   Zonal variance",
@@ -1937,8 +1937,8 @@ static char *MerstatHelp[] = {
 
 static char *GridboxstatHelp[] = {
     "NAME",
-    "    gridboxmin, gridboxmax, gridboxsum, gridboxmean, gridboxavg, gridboxvar, ",
-    "    gridboxstd - Statistical values over grid boxes",
+    "    gridboxmin, gridboxmax, gridboxsum, gridboxmean, gridboxavg, gridboxstd, ",
+    "    gridboxstd1, gridboxvar, gridboxvar1 - Statistical values over grid boxes",
     "",
     "SYNOPSIS",
     "    <operator>,nx,ny  ifile ofile",
@@ -1951,12 +1951,23 @@ static char *GridboxstatHelp[] = {
     "",
     "OPERATORS",
     "    gridboxmin   Gridbox minimum",
+    "                 Minimum value of the selected grid boxes.",
     "    gridboxmax   Gridbox maximum",
+    "                 Maximum value of the selected grid boxes.",
     "    gridboxsum   Gridbox sum",
+    "                 Sum of the selected grid boxes.",
     "    gridboxmean  Gridbox mean",
+    "                 Mean of the selected grid boxes.",
     "    gridboxavg   Gridbox average",
-    "    gridboxvar   Gridbox variance",
+    "                 Average of the selected grid boxes.",
     "    gridboxstd   Gridbox standard deviation",
+    "                 Standard deviation of the selected grid boxes. Divisor is n.",
+    "    gridboxstd1  Gridbox standard deviation",
+    "                 Standard deviation of the selected grid boxes. Divisor is (n-1).",
+    "    gridboxvar   Gridbox variance",
+    "                 Variance of the selected grid boxes. Divisor is n.",
+    "    gridboxvar1  Gridbox variance",
+    "                 Variance of the selected grid boxes. Divisor is (n-1).",
     "",
     "PARAMETER",
     "    nx  INTEGER  Number of grid boxes in x direction",
