@@ -5,6 +5,8 @@
 
 2015-05-26  Uwe Schulzweida
 
+	* New operator: gridboxstd1 - Gridbox standard deviation [Divisor is (n-1)]
+	* New operator: gridboxvar1 - Gridbox variance [Divisor is (n-1)]
 	* New operator: merstd1  - Meridional standard deviation [Divisor is (n-1)]
 	* New operator: mervar1  - Meridional variance [Divisor is (n-1)]
 	* New operator: zonstd1  - Zonal standard deviation [Divisor is (n-1)]
